normal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-java-deployment
  labels:
    app: hello-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-java
  template:
    metadata:
      labels:
        app: hello-java
    spec:
      containers:
      - name: hello-java
        image: quay.io/rhn_support_kchang/hello-java:1.0.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/hello
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/hello
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        # resources:
        #   limits:
        #     cpu: 500m
        #     memory: 4Gi
