normal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java-service
spec:
  selector:
    app: hello-java
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
