normal/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-java-edge-route
spec:
  to:
    kind: Service
    name: hello-java-service
  port:
    targetPort: 8080
  tls:
    termination: edge
